[package]
name = "lp_parser_rs"
version = "1.3.0"
edition = "2021"
authors = ["Dan Dixey", "Dan Dixey <dan@functorml.co.uk>"]
rust-version = "1.61.0"
license = "MIT OR Apache-2.0"
description = "A Rust parser for the LP file format."
keywords = ["linear-programming", "optimization", "parser", "math", "solver"]
categories = ["mathematics", "algorithms", "science"]
repository = "https://github.com/dandxy89/lp_parser_rs"

[dependencies]
diff-struct = { version = "0.5", optional = true }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2.0"
unique_id = "0.1"

[dev-dependencies]
float_eq = "1.0"
insta = { version = "1.41", features = ["yaml", "redactions"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
default = []
serde = ["dep:serde"]
diff = ["dep:diff-struct", "serde"]

[package.metadata.cargo-machete]
ignored = ["diff-struct"]
