[package]
name = "lp_parser_rs"
version = "1.3.2"
edition = "2021"
authors = ["Dan Dixey", "Dan Dixey <dan@functorml.co.uk>"]
rust-version = "1.61.0"
license = "MIT OR Apache-2.0"
description = "A Rust parser for the LP file format."
keywords = ["linear-programming", "optimization", "parser", "math", "solver"]
categories = ["mathematics", "algorithms", "science"]
repository = "https://github.com/dandxy89/lp_parser_rs"

[lib]
doctest = false

[dependencies]
diff-struct = { version = "0.5", optional = true }
log = "0.4"
nom = { version = "7.1", optional = true }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
unique_id = { version = "0.1", features = ["sequence"] }

[dev-dependencies]
float_eq = "1.0.1"
insta = { version = "1.41", features = ["yaml", "redactions"] }
serde_json = "1.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
default = []
diff = ["dep:diff-struct", "serde"]
nom = ["dep:nom"]
serde = ["dep:serde"]

[package.metadata.cargo-machete]
ignored = ["diff-struct"]
