[package]
name = "lp_parser_rs"
version = "1.4.1"
edition = "2021"
authors = ["Dan Dixey", "Dan Dixey <dan@functorml.co.uk>"]
rust-version = "1.61.0"
license = "MIT OR Apache-2.0"
description = "A Rust parser for the LP file format."
keywords = ["linear-programming", "optimization", "parser", "math", "solver"]
categories = ["mathematics", "algorithms", "science"]
repository = "https://github.com/dandxy89/lp_parser_rs"
default-run = "lp_parser"

[lib]
doctest = false

[[bin]]
name = "lp_parser"
path = "src/bin/main.rs"

[dependencies]
diff-struct = { version = "0.5", optional = true }
log = "0.4"
nom = { version = "7.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
unique_id = { version = "0.1", features = ["sequence"] }

[dev-dependencies]
float_eq = "1.0.1"
insta = { version = "1.41", features = ["yaml", "redactions"] }
serde_json = "1.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
default = []
diff = ["dep:diff-struct", "serde"]
serde = ["dep:serde"]

[package.metadata.cargo-machete]
ignored = ["diff-struct"]
