[project]
name = "parse_lp"
readme = "README.md"
description = "A LP file format parser for Python, powered by Rust"
license = { file = "LICENSE-APACHE" }
requires-python = ">=3.9"
keywords = [
    "linear-programming",
    "optimization",
    "parser",
    "integer-programming",
    "math",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
include = ["README.md", "LICENSE-APACHE", "parse_lp/py.typed", "parse_lp/*.pyi"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "pip>=26.0",
    "pytest>=8.4.1",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "wheel>=0.46.3",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "RUF",    # ruff-specific
    "B",      # flake8-bugbear (catches common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
]
ignore = ["E501", "SIM108"]  # line length, ternary operator

[tool.ruff.lint.isort]
known-first-party = ["parse_lp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --color=yes"

[tool.coverage.run]
branch = true
source = ["parse_lp"]
