[project]
name = "parse_lp"
readme = "README.md"
description = "A LP file format parser for Python, powered by Rust"
license = { file = "LICENSE-APACHE" }
requires-python = ">=3.9"
keywords = [
    "linear-programming",
    "optimization",
    "parser",
    "integer-programming",
    "math",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
include = ["README.md", "LICENSE-APACHE", "parse_lp/py.typed", "parse_lp/*.pyi"]

[dependency-groups]
dev = [
    "basedpyright",
    "pip",
    "pytest",
    "ruff",
    "ty",
    "wheel",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "SIM108", "D", "S", "PLR2004", "COM"]

[tool.ruff.lint.per-file-ignores]
"parse_lp/cli.py" = ["T201"]
# The extension module has no Python source, so stub docstrings are the only
# docs IDEs can surface for it.
"parse_lp/*.pyi" = ["PYI021"]

[tool.ruff.lint.isort]
known-first-party = ["parse_lp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --color=yes"

[tool.coverage.run]
branch = true
source = ["parse_lp"]
