[package]
name = "lp_parser_rs"
version = "3.0.2"
edition = "2021"
authors = ["Dan Dixey", "Dan Dixey <dan@functorml.co.uk>"]
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "A Rust parser for the LP file format."
keywords = [
    "linear-programming",
    "optimisation",
    "parser",
    "integer-programming",
    "math",
]
categories = ["mathematics", "algorithms", "science"]
repository = "https://github.com/dandxy89/lp_parser_rs"
default-run = "lp_parser"

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[[bin]]
name = "lp_parser"
path = "src/bin/lp_parser/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.4.0", optional = true }
diff-struct = { version = "0.5.3", optional = true }
lalrpop-util = "0.22.2"
lp-solvers = { version = "1.1", optional = true }
log = "0.4.29"
logos = "0.16.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = "2.0.17"
unique_id = { version = "0.1.7", features = ["sequence"] }

[build-dependencies]
lalrpop = "0.22.2"

[dev-dependencies]
float_eq = "1.0.1"
insta = { version = "1.44.3", features = ["yaml", "redactions"] }
serde_json = "1.0.145"

[features]
csv = ["dep:csv"]
default = []
diff = ["dep:diff-struct", "serde"]
lp-solvers = ["dep:lp-solvers"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml"]
test-cbc = ["lp-solvers"]

[package.metadata.cargo-machete]
ignored = ["diff-struct"]
