[package]
name = "lp_parser_rs"
version = "3.5.0"
edition = "2024"
authors = ["Dan Dixey", "Dan Dixey <dan@functorml.co.uk>"]
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "A Rust parser for the LP file format."
keywords = [
    "linear-programming",
    "optimisation",
    "parser",
    "integer-programming",
    "math",
]
categories = ["mathematics", "algorithms", "science"]
repository = "https://github.com/dandxy89/lp_parser_rs"

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[[bin]]
name = "lp_parser"
path = "src/bin/lp_parser/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.6", features = ["derive"], optional = true }
csv = { version = "1.4", optional = true }
indexmap = "2.7"
lalrpop-util = { version = "0.23" }
lasso = "0.7"
lp-solvers = { version = "1.2", optional = true }
log = "0.4"
memmap2 = { version = "0.9", optional = true }
logos = "0.16"
regex = { version = "1.10", optional = true }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = "2.0"

[build-dependencies]
lalrpop = { version = "0.23.1" }

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml", "redactions"] }
serde_json = "1.0.150"
test-case = "3.3.1"

[features]
cli = ["dep:clap", "dep:regex", "dep:serde_json", "dep:serde_yaml"]
csv = ["dep:csv"]
default = []
mmap = ["dep:memmap2"]
diff = ["serde"]
lp-solvers = ["dep:lp-solvers"]
serde = ["dep:serde"]
test-cbc = ["lp-solvers"]

[package.metadata.cargo-machete]
ignored = ["lalrpop"]
