[package]
name = "lp_parser_tui"
version = "3.4.0"
edition = "2024"
description = "Interactive TUI diff viewer for LP files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dandxy89/lp_parser_rs"
keywords = ["lp", "parser", "tui", "diff"]
categories = ["command-line-utilities"]

[[bin]]
name = "lp_diff"
path = "src/main.rs"

[dependencies]
lp_parser_rs = { path = "../rust", features = ["diff", "serde", "mmap"] }

arboard = "3.6.1"
chrono = "0.4.45"
csv = "1.4.0"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
frizbee = "0.9.0"
highs = "2.3.0"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm"] }
regex = "1.12.4"

# Unix-only: raise(SIGTSTP) for Ctrl+Z suspend/resume. Already in the dependency
# tree transitively (crossterm); declared here so the call site is portable.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
